--- a/templates/posting.html
+++ b/templates/posting.html
@@ -63,23 +63,23 @@
 <div class="wrap">
     <input id="title" class="input is-normal" type="text" placeholder="제목, 물품명을 적어주세요">
     {#캘린더 부분#}
-    <div class="calender">
-        <span style="font-size: 20px">대여 가능 기간</span>
-        <input id="calender" class="calender" type="text" name="datefilter" autocomplete="off"/>
+    <div class="calendar-box">
+        <p>대여 가능 기간</p>
+        <input id="calender" class="calender input is-normal" type="text" name="datefilter" autocomplete="off" style="width: 350px;"/>
     </div>
     {#가격#}
-    <input id="price" class="input is-normal" type="text" onchange="price(this)"
+    <input id="price" class="input" type="text" onchange="price(this)"
            placeholder="가격(1일 기준 대여가격)" style="width: 350px" maxlength="15">
     <p id="price_warning" class="is-hidden"><span style="color: red;font-weight: bold;">※숫자만 입력해 주세요!</span></p>
     {#이미지 업로드 부분#}
-    <div id="file-js-example" class="file has-name is-info">
+    <div id="file-js-example" class="file has-name">
         <label class="file-label " style="margin-top: 10px">
             <input class="file-input" type="file" name="resume" id="img" onclick="img_up()"
                    accept="image/jpeg, image/jpg, image/png"/>
             <span class="file-cta">
-      <span class="file-label">제품 사진</span>
-    </span>
-            <span class="file-name"></span>
+                <span class="file-label">제품 사진</span>
+            </span>
+            <span class="file-name">No file uploaded</span>
         </label>
     </div>
     {#이미지 미리보기#}
@@ -92,12 +92,12 @@
     <div class="field">
         <input id="local_address" class="input" type="text" placeholder="직거래 주소 입력(지번주소)" style="width: 400px"
                onclick="local_search()">
-        <input type="button" class="button is-info" onclick="map()" value="지도 확인" style="margin-top: 30px">
+        <input type="button" class="button is-light" onclick="map()" value="지도 확인" style="margin-top: 30px">
     </div>
     <p id="local_warning" class="is-hidden" style="font-weight: bold; color: red">※주소 창에 주소를 먼저 입력해 주세요.</p>
     {#지도api#}
     <div id="map" class="is-hidden" style="width: 500px;height:300px;margin:10px auto 50px auto;"></div>
 </div>
-<button class="button is-info posting" onclick="posting()">등록하기</button>
+<button class="button is-dark posting" onclick="posting()">등록하기 ></button>
 </body>
 </html>
