fix:파일 이름 받도록 추가

--- a/templates/posting_update.html
+++ b/templates/posting_update.html
@@ -52,7 +52,10 @@
             file_name()
             fileupload()
         })
-
+        function file_name(){
+            const fileName = document.querySelector('#file-js-example .file-name');
+            fileName.textContent = `{{ post.file }}`
+        }
 
     </script>
 </head>
