fix:파일 이름 조건 수정

--- a/templates/posting_update.html
+++ b/templates/posting_update.html
@@ -85,7 +85,7 @@
                 alert("대여 기간을 입력해주세요")
             } else if (price == "") {
                 alert("가격을 입력해주세요")
-            } else if (fileName.textContent = "") {
+            } else if (fileName.textContent == "") {
                 alert("제품 사진을 첨부해주세요")
             } else if (content == "") {
                 alert("내용을 적어주세요")
