add : post 날짜 추가

--- a/templates/post.html
+++ b/templates/post.html
@@ -285,7 +285,7 @@
         </div>
         <div class=content-name;>
             <h1>{{ post.title }}</h1>
-            <h3>{{ post.price }}원 (1일 기준)</h3>
+            <h3>{{ post.price }}원 (1일 기준) <small>{{ post.date }}</small></h3>
         </div>
 
         {#지도, 로드뷰 띄우기 #}
