--- a/templates/post.html
+++ b/templates/post.html
@@ -254,8 +254,8 @@
             <div class="menu dropdown" style="float: right">
                 <i class="fa-solid fa-ellipsis-vertical fa-2x dropbtn" onclick="myFunction()" style="float:right; margin: auto 20px 0px auto; "></i>
                  <div id="myDropdown" class="dropdown-content">
-                    <a href="http://localhost:5000/posting_update/{{ post.username }}/{{ post.idx }}">수정하기<i class="fa-solid fa-pencil" ></i></a>
-                    <a href="javascript:deletePost()">삭제하기<i class="fa-solid fa-trash-can" style="color: red"></i></a>
+                    <a href="http://localhost:5000/posting_update/{{ post.username }}/{{ post.idx }}">수정하기&nbsp&nbsp<i class="fa-solid fa-pencil" ></i></a>
+                    <a href="javascript:deletePost()">삭제하기&nbsp&nbsp<i class="fa-solid fa-trash-can" style="color: red"></i></a>
                   </div>
             </div>
         {% endif %}
