feat:전체 파일 수정
app.py 프로필 수정 기능 완료
posting_update 프로필 수정기능
나머진 글자 수정

--- a/templates/posting.html
+++ b/templates/posting.html
@@ -64,8 +64,8 @@
     <input id="title" class="input is-normal" type="text" placeholder="제목, 물품명을 적어주세요">
     {#캘린더 부분#}
     <div class="calendar-box">
-        <p>대여 가능 기간</p>
-        <input id="calender" class="calender input is-normal" type="text" name="datefilter" autocomplete="off" style="width: 350px;"/>
+        <input id="calender" class="calender input is-normal" type="text"
+               name="datefilter" autocomplete="off" style="width: 350px;" placeholder="대여 가능 기간"/>
     </div>
     {#가격#}
     <input id="price" class="input" type="text" onchange="price(this)"
@@ -79,7 +79,7 @@
             <span class="file-cta">
                 <span class="file-label">제품 사진</span>
             </span>
-            <span class="file-name">No file uploaded</span>
+            <span class="file-name">업로드하기</span>
         </label>
     </div>
     {#이미지 미리보기#}
