--- a/templates/post.html
+++ b/templates/post.html
@@ -64,7 +64,7 @@
 
                 } else {
                     document.getElementById("frame").style.visibility = "hidden"
-                    window.location.href = "http://localhost:5000/posts/{{ post.idx }}"
+                    window.location.href = "/posts/{{ post.idx }}"
                 }
             });
         })
@@ -254,7 +254,7 @@
             <div class="menu dropdown" style="float: right">
                 <i class="fa-solid fa-ellipsis-vertical fa-2x dropbtn" onclick="myFunction()" style="float:right; margin: auto 20px 0px auto; "></i>
                  <div id="myDropdown" class="dropdown-content">
-                    <a href="http://localhost:5000/posting_update/{{ post.username }}/{{ post.idx }}">수정하기&nbsp&nbsp<i class="fa-solid fa-pencil" ></i></a>
+                    <a href="/posting_update/{{ post.username }}/{{ post.idx }}">수정하기&nbsp&nbsp<i class="fa-solid fa-pencil" ></i></a>
                     <a href="javascript:deletePost()">삭제하기&nbsp&nbsp<i class="fa-solid fa-trash-can" style="color: red"></i></a>
                   </div>
             </div>
@@ -304,7 +304,7 @@
     </div>
 
     <div class="popup" id="frame" data-popup="popup-1" style="visibility:hidden; overflow-x:hidden;overflow-y:hidden">
-        <iframe src="http://localhost:5000/posts/{{ post.idx }}/chat" width="300" height="468"></iframe>
+        <iframe src="/posts/{{ post.idx }}/chat" width="300" height="468"></iframe>
     </div>
 </div>
 </body>
