move:css,js 파일 이동 중
css,js 파일 이동중입니다

--- a/templates/posting.html
+++ b/templates/posting.html
@@ -37,7 +37,7 @@
 
 
     <!--javascript 분리-->
-    <script src="{{ url_for('static', filename='posting.js') }}"></script>
+    <script src="{{ url_for('static', filename='/js/posting.js') }}"></script>
 
     <!-- css 분리-->
     <link rel="stylesheet" type="text/css" href="/static/css/posting.css"/>
