--- a/templates/post.html
+++ b/templates/post.html
@@ -33,12 +33,13 @@
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9600c7eddf2d8ec432aa9d8791d1e471&libraries=services,clusterer,drawing"></script>
 
-    <script src="{{ url_for('static',filename='like.js') }}"></script>
+    <script src="{{ url_for('static',filename='/js/like.js') }}"></script>
 
     <!-- css 분리-->
     <link rel="stylesheet" type="text/css" href="/static/css/post.css"/>
 
     <script>
+        //jinja2 사용 함수만 남겨놨습니다. 나머지는 like.js 로 옮겼습니다!
         $(document).ready(function () {
             map();
             var floatPosition = parseInt($(".sideBanner").css('top'))
@@ -129,57 +130,6 @@
 
         }
 
-
-        function sign_out() {
-            $.removeCookie('mytoken', {path: '/'});
-            alert('로그아웃!')
-            window.location.href = "/login"
-        }
-
-        function kakaoLogout() {
-            if (Kakao.Auth.getAccessToken()) {
-                Kakao.API.request({
-                    url: '/v1/user/unlink',
-                    success: function (response) {
-                        console.log(response)
-                    },
-                    fail: function (error) {
-                        console.log(error)
-                    },
-                })
-                Kakao.Auth.setAccessToken(undefined)
-            }
-        }
-
-        function roadview() {
-            $('#map').toggleClass('is-hidden')
-            $('#roadview').toggleClass('is-hidden')
-            if ($('#map').hasClass('is-hidden')){
-                $('#map_btn').text("지도 보기")
-            } else {
-                $('#map_btn').text("로드뷰 보기")
-                }
-        }
-
-        function myFunction() {
-            document.getElementById("myDropdown").classList.toggle("show");
-        }
-
-        // Close the dropdown menu if the user clicks outside of it
-        window.onclick = function (event) {
-            if (!event.target.matches('.dropbtn')) {
-
-                var dropdowns = document.getElementsByClassName("dropdown-content");
-                var i;
-                for (i = 0; i < dropdowns.length; i++) {
-                    var openDropdown = dropdowns[i];
-                    if (openDropdown.classList.contains('show')) {
-                        openDropdown.classList.remove('show');
-                    }
-                }
-            }
-        }
-
          function deletePost() {
             let result = confirm("정말로 삭제하시겠습니까?");
             let idx_give = '{{ post.idx }}'
@@ -211,21 +161,8 @@
 <div class="size">
     <div class="user">
         <section class="float-right login-btn" onclick="location.href='/user/{{ user_info.username }}'">
-            <!--로그인-->
             <i class="fa-solid fa-cat fa-lg"></i>
             <span style="font-weight: bold">&nbsp;&nbsp;"{{ user_info.nickname }}"</span>님 환영합니다.
-            <!--    <div class="logout">-->
-            <!--        <a class="button level-item has-text-centered is-sparta is-outlined" aria-label="logout"-->
-            <!--           onclick="sign_out()">-->
-            <!--            로그아웃&nbsp;&nbsp;&nbsp;<span class="icon is-small"><i class="fa fa-sign-out" aria-hidden="true"></i></span>-->
-            <!--        </a>-->
-            <!--        <a class="button level-item has-text-centered is-sparta is-outlined" aria-label="logout"-->
-            <!--           onclick="kakaoLogout()">-->
-            <!--            카카오 로그아웃&nbsp;&nbsp;&nbsp;<span class="icon is-small"><i class="fa fa-sign-out"-->
-            <!--                                                                     aria-hidden="true"></i></span>-->
-            <!--        </a>-->
-            <!--    </div>-->
-            <!--로그인-->
         </section>
     </div>
 
