move:js 파일 위치 변경

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9600c7eddf2d8ec432aa9d8791d1e471&libraries=services,clusterer,drawing"></script>
 
-    <script src="{{ url_for('static', filename='geolocation.js') }}"></script>
+    <script src="{{ url_for('static', filename='/js/geolocation.js') }}"></script>
 
     <!--javascript 분리-->
     <script src="{{ url_for('static', filename='/js/index.js') }}"></script>
