--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,9 @@
 </section>
 </section>
 <div class="home-img">
-    <img class="img-home" src="/static/home.jpg">
+    <video autoplay="autoplay" muted="muted" loop="loop" preload="auto">
+        <source src="/static/167824144-1ecd6e1e-5c8e-4642-8e09-5b8c24a8770a.mp4" type="video/mp4">
+    </video>
 </div>
 <section class="write-btn">
     <button class="button is-dark" onclick="location.href='/posting/{{ user_info.username}}'">
