--- a/templates/post.html
+++ b/templates/post.html
@@ -159,12 +159,10 @@
         </div>
 
         <div class="size">
-            <div class="user">
-                <section class="float-right login-btn" onclick="location.href='/user/{{ user_info.username }}'">
-                    <i class="fa-solid fa-cat fa-lg"></i>
-                    <span style="font-weight: bold">&nbsp;&nbsp;"{{ user_info.nickname }}"</span>님 환영합니다.
-                </section>
-            </div>
+            <section class="float-right login-btn" onclick="location.href='/user/{{ user_info.username }}'" style='cursor:pointer;'>
+                <i class="fa-solid fa-cat fa-lg"></i>
+                <span style="font-weight: bold">&nbsp;&nbsp;"{{ user_info.nickname }}"</span>님 환영합니다.
+            </section>
 
             <section class="hero" onclick="window.location.href='/'" style='width: 300px; cursor:pointer;'>
                 <div class="hero-body">
@@ -172,25 +170,24 @@
                     <span class="title hero-font">고구마캣</span>
                 </div>
             </section>
-            </section>
+        </div>
+        <hr>
 
-        </div>
-        <div class="jumbo">
-            <div class="container">
-                <img src="/static/post_pic/{{ post.file }}" style="width : 600px; height: 600px;">
-            </div>
-        </div>
         <div class="content">
+            <div class="jumbo">
+                <div class="container">
+                    <img src="/static/post_pic/{{ post.file }}">
+                </div>
+            </div>
             <div class="user-info" id="user_information">
                 <img src="/static/{{ user.profile_pic_real }}" id=user_profile>
                 {% if user_info.nickname == user.nickname %}
-                    <div class="menu dropdown" style="float: right">
+                    <div class="menu dropdown" style="float: right;">
                         <i class="fa-solid fa-ellipsis-vertical fa-2x dropbtn" onclick="myFunction()"
                            style="float:right; margin: auto 20px 0px auto; "></i>
                         <div id="myDropdown" class="dropdown-content">
-                            <a href="/posting_update/{{ post.username }}/{{ post.idx }}">수정하기&nbsp&nbsp<i
-                                    class="fa-solid fa-pencil"></i></a>
-                            <a href="javascript:deletePost()">삭제하기&nbsp&nbsp<i class="fa-solid fa-trash-can" style="color: red"></i></a>
+                            <a href="/posting_update/{{ post.username }}/{{ post.idx }}">수정하기<i class="fa-solid fa-pencil"></i></a>
+                            <a href="javascript:deletePost()">삭제하기<i class="fa-solid fa-trash-can" style="color: red"></i></a>
                         </div>
                     </div>
                 {% endif %}
@@ -216,9 +213,13 @@
             </div>
             <div class=content-name;>
                 <h1>{{ post.title }}</h1>
-                <h3>{{ post.price }}원 (1일 기준) <small>{{ post.date }}</small></h3>
+                <h4>{{ post.price }}원 (1일 기준) <small>{{ post.date }}</small></h4>
             </div>
 
+            <div class="content-info">
+                <br>
+                <p> {{ post.content }}</p>
+            </div>
             {#지도, 로드뷰 띄우기 #}
             <div class="map" id="mapping">
                 <div id="map" class="local" style="width:400px;height:350px;"></div> <!-- 지도를 표시할 div 입니다 -->
@@ -227,12 +228,6 @@
             </div>
             <button id="map_btn" class="button is-info" style="display:block;margin:  auto" onclick="roadview()">로드뷰 보기
             </button>
-
-
-            <div class="content-info">
-                <p>상품 설명</p>
-                <h1> {{ post.content }}</h1>
-            </div>
         </div>
 
         <div class="popup" id="frame" data-popup="popup-1" style="visibility:hidden; overflow-x:hidden;overflow-y:hidden">
