--- a/templates/index.html
+++ b/templates/index.html
@@ -105,8 +105,8 @@
 <section class="text-box is-hidden" id="query-text-box">
 </section>
 
-<div class="card-columns" style="margin: 50px auto;">
-    <div class="card-box" id="card-box"></div>
+<div class="card-columns card-box" id="card-box" style="margin: 50px auto;">
+
 </div>
 
 <nav id="page-box" class="pagination is-centered" role="navigation" aria-label="pagination" style="margin-top: 30px;">
