--- a/templates/user.html
+++ b/templates/user.html
@@ -262,24 +262,16 @@
     </div>
     <div>
         <section class="tab-content">
-            <div class="card-columns" style="margin: 50px auto;">
-                <div class="card-box" id="card-box-post"></div>
-            </div>
+            <div class="card-columns card-box" id="card-box-post" style="margin: 50px auto;"></div>
         </section>
         <section class="tab-content">
-            <div class="card-columns" style="margin: 50px auto;">
-                <div class="card-box" id="card-box-comment"></div>
-            </div>
+            <div class="card-columns card-box" id="card-box-comment" style="margin: 50px auto;"></div>
         </section>
         <section class="tab-content">
-            <div class="card-columns" style="margin: 50px auto;">
-                <div class="card-box" id="card-box-review"></div>
-            </div>
+            <div class="card-columns card-box" id="card-box-review" style="margin: 50px auto;"></div>
         </section>
         <section class="tab-content">
-            <div class="card-columns" style="margin: 50px auto;">
-                <div class="card-box" id="card-box-like"></div>
-            </div>
+            <div class="card-columns card-box" id="card-box-like" style="margin: 50px auto;"></div>
         </section>
     </div>
 </section>
