--- a/static/css/user.css
+++ b/static/css/user.css
@@ -37,3 +37,12 @@ body {
 .help {
     color: gray;
 }
+.card-box {
+    display: flex;
+    flex-wrap: wrap;
+}
+.col {
+    padding-bottom: 10px;
+    margin-left: 8px;
+    flex: 0 0 31%;
+}
