modify: post.html 줄바꿈 인식하도록 변경

--- a/templates/post.html
+++ b/templates/post.html
@@ -216,7 +216,7 @@
                 <h4>{{ post.price }}원 (1일 기준) <small>{{ post.date }}</small></h4>
             </div>
 
-            <div class="content-info">
+            <div class="content-info" style="white-space: pre-line">
                 <br>
                 <p> {{ post.content }}</p>
             </div>
