modify: 메인 이미지 배너에 홈 링크 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
     </div>
 </section>
 </section>
-<div class="home-img">
+<div class="home-img" onclick="window.location.href='/'">
     <video autoplay="autoplay" muted="muted" loop="loop" preload="auto">
         <source src="/static/167824144-1ecd6e1e-5c8e-4642-8e09-5b8c24a8770a.mp4" type="video/mp4">
     </video>
