modify: post.html 로드뷰 보기 버튼 색 수정, 크기 고정

--- a/templates/post.html
+++ b/templates/post.html
@@ -223,7 +223,7 @@
                 <div id="roadview" class="road is-hidden"
                      style="width:400px;height:350px;margin: 40px auto 40px auto"></div> <!-- 로드뷰를 표시할 div 입니다 -->
             </div>
-            <button id="map_btn" class="button is-info" style="display:block;margin:  auto" onclick="roadview()">로드뷰 보기
+            <button id="map_btn" class="button is-dark" style="display:block; margin: auto; width: 150px;" onclick="roadview()">로드뷰 보기
             </button>
         </div>
 
