modify: post.html 간격 조정

--- a/templates/post.html
+++ b/templates/post.html
@@ -198,8 +198,10 @@
                 </div>
             </div>
         {% endif %}
-        <h4 id="user_name">{{ post.nickname }}</h4>
-        <h6 id="user_locate"> {{ post.address }}</h6>
+        <div style="margin-left: 10px;">
+            <h4 id="user_name">{{ post.nickname }}</h4>
+            <h6 id="user_locate" style="margin-top: 6px;"> {{ post.address }}</h6>
+        </div>
 
         <hr>
         <div class="like-box">
