modify:수정,작성 페이지 캘린더 readonly로 변경

--- a/templates/posting_update.html
+++ b/templates/posting_update.html
@@ -146,7 +146,7 @@
     <input id="title" class="input is-normal" type="text" placeholder="제목, 물품명을 적어주세요">
     {#캘린더 부분#}
     <div>
-        <input id="calendar" class="input" type="text" name="datefilter" autocomplete="off"/>
+        <input id="calendar" class="input" type="text" name="datefilter" autocomplete="off"style="cursor: pointer" readonly/>
     </div>
     {#가격#}
     <input id="price" class="input" type="text" onchange="price(this)"
